--- a/.golangci.yml
+++ b/.golangci.yml
@@ -8,7 +8,8 @@ linters:
     - goimports
     - gofmt
     - gofumpt
-
+    - noctx
+    
 linters-settings:
   goimports:
     local-prefixes: github.com/go-task
